--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,6 @@
 body {
   background-color: #444;
   color: #fff;
-  height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
@@ -144,6 +143,7 @@ header {
   color: #eece1a; }
 
 main {
+  height: 100%;
   padding: 4rem;
   min-height: calc(100vh - 60px); }
   main .icons {
@@ -195,23 +195,29 @@ main {
       transition: all 0.5s ease-out; }
 
 .boxes {
+  padding-left: 3rem;
+  align-items: center;
+  /*
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
-  margin-top: 1rem; }
+  
+  margin-top: 1rem;
+*/ }
   .boxes div {
-    font-size: 2rem;
-    border: 3px #fff solid;
-    padding: 1.5rem 2.5rem;
-    margin-bottom: 3rem;
-    transition: all 0.5s ease-out; }
-    .boxes div:hover {
+    font-size: 1.2rem;
+    /*
+    &:hover {
       padding: 0.5rem 1.5rem;
-      background: #eece1a;
-      color: #000; }
-      .boxes div:hover span {
-        color: #000; }
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+    */ }
+  .boxes .contacts {
+    margin-bottom: 1rem; }
 
 .btn, .btn-light, .btn-dark {
   display: block;
@@ -235,7 +241,7 @@ main {
   padding: 1rem;
   background: #2b2b2b;
   color: #fff;
-  height: 60px; }
+  height: 50px; }
 
 @media screen and (min-width: 1171px) {
   .projects {
